[CCUK-1424] Filter columns poorly aligned on small screens : Added new css prop to fix width of check column [rev Alex.Scown]

--- a/find-web/src/main/webapp/static/css/app-include.css
+++ b/find-web/src/main/webapp/static/css/app-include.css
@@ -48,6 +48,10 @@ html, body {
     z-index: 1000;
 }
 
+.check-cell {
+    width: 29px;
+}
+
 .break-all {
     word-break: break-all;
 }
